Muu töötab, edetabelisse salvestamine mitte